# -Multiple-Angle-Camera-Control

./: README.md  __init__.py  camera_control_prompt_node.py  light_control_prompt_node.py  pyproject.toml
.github/workflows/: publish_action.yml
workflow/: Qwen_edit_multiple_view.json
