[project]
name = "multiple-angle-camera-control"
description = "Advanced camera control prompt generator for ComfyUI, optimized for dx8152's MultiAngle LoRA. Simplifies multi-directional movements, rotations, and special views with bilingual output."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

[project.urls]
Repository = "https://github.com/mercu-lore/-Multiple-Angle-Camera-Control"
Documentation = "https://github.com/mercu-lore/-Multiple-Angle-Camera-Control/wiki"
"Bug Tracker" = "https://github.com/mercu-lore/-Multiple-Angle-Camera-Control/issues"

[tool.comfy]
PublisherId = "mercu-lore"
DisplayName = "Multiple-Angle-Camera-Control"
Icon = ""
includes = []
# "requires-comfyui" = ">=1.0.0"
